# encoding-periodic

./: .gitattributes  .gitignore  1-draw.py  3.1-exp.py  3.3-draw.py  3.4-exp-compare.py  3.6-compare-draw.py  4.1-exp.py  4.3-draw.py  5.1-exp.py  5.3-draw.py  README.md  config.py  exp_ablation_beta.py  exp_ablation_d.py  exp_ablation_encoding.py  exp_ablation_p.py  exp_main.py  fig_concept_tradeoff.py  fig_different_beta.py  fig_framework.py  fig_freq_data_regions.py  fig_introduction.py  fig_p_tradeoff.py  fig_quantize_tradeoff.py  fig_residual_analysis.py  fig_tradeoff.py  process_ablation_beta.py  process_ablation_d.py  process_ablation_encoding.py  process_ablation_p.py  process_data_info.py  process_main.py  pyproject.toml  requirements.txt
algorithm/: __init__.py  bit_packing.py  bit_packing_signed.py  bit_packing_signed_grouped.py  constants.py  descending_bit_packing.py  descending_bit_packing_signed.py  frequency_encoding.py  frequency_encoding_v2.py  period_decode.py  period_encode.py  separate_storage.py  sign_packing.py  test_bit_packing.py  test_bit_packing_signed.py  test_bit_packing_signed_grouped.py  test_descending_bit_packing.py  test_descending_bit_packing_signed.py  test_frequency_encoding.py  test_separate_storage.py  test_variable_length_decreasing_encoding.py  ts_2diff_decode.py  ts_2diff_encode.py  utils.py  variable_length_decreasing_encoding.py
custom_tools/: frequency.py  period.py  run_length_encode.py  test_frequency.py  test_period.py  test_run_length_encode.py
data/: dianwang_value_from2020-11-29to2020-12-06_10457.csv  (+441 more)
encoder/: rle.py  (+35 more)
(+388 files in other folders)
